# pkg/docs/swagger.json
@@ -69,6 +69,29 @@
                 "responses": {}
             }
         },
+        "/connections": {
+            "get": {
+                "description": "Returns a table of all VPN connections with details including peer IDs, IP addresses and status",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "VPN"
+                ],
+                "summary": "Get all VPN connections",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/vpn.ConnectionDetails"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/getConfig": {
             "get": {
                 "description": "Get the content of the configuration file",
@@ -222,6 +245,53 @@
                     "500": {
                         "description": "Internal Server Error"
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "vpn.ConnectionDetails": {
+            "type": "object",
+            "properties": {
+                "connectedAt": {
+                    "description": "Time when the connection was established",
+                    "type": "string"
+                },
+                "interfaceName": {
+                    "description": "Name of the TUN interface",
+                    "type": "string"
+                },
+                "ipNegotiated": {
+                    "description": "Whether IP negotiation has been completed",
+                    "type": "boolean"
+                },
+                "isRunning": {
+                    "description": "Whether the connection is active",
+                    "type": "boolean"
+                },
+                "localIp": {
+                    "description": "Local IP for this TUN interface",
+                    "type": "string"
+                },
+                "origLocalIp": {
+                    "description": "Original local IP (before negotiation)",
+                    "type": "string"
+                },
+                "origRemoteIp": {
+                    "description": "Original remote IP (before negotiation)",
+                    "type": "string"
+                },
+                "peerId": {
+                    "description": "ID of the connected peer",
+                    "type": "string"
+                },
+                "remoteIp": {
+                    "description": "Remote IP for this TUN interface",
+                    "type": "string"
+                },
+                "streamActive": {
+                    "description": "Whether the stream is active (not closed)",
+                    "type": "boolean"
                 }
             }
         }
